# tasa_churn

./: .gitignore  Makefile  README.md  ayuda  main.py  pyproject.toml  setup.py
data/processed/: chrun_tree.dot
docs/source/: conf.py  index.rst  modules.rst  tasa_churn.data.rst  tasa_churn.features.rst  tasa_churn.models.rst  tasa_churn.rst  tasa_churn.utils.rst  tasa_churn.visualization.rst
models/: RandomForest.joblib
models/artifacts/: columns.joblib  encoders.joblib  scaler.joblib
notebooks/: 0-1-Alejandro Cancelas Chapela-ProcesamientoDatos.ipynb
tasa_churn/data/: make_dataset.py
tasa_churn/features/: build_features.py
tasa_churn/models/: predict_model.py  train_model.py
tasa_churn/utils/: paths.py
tests/: test_proba.py
